# reap

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE
js/: index.html
js/scripts/: graph.js  graph.js.three  graph.js.two
reap/core/: BUILD  error.h  main.cc  serializer.cc  serializer.h  status.cc  status.h  type.h
reap/core/geometry/: BUILD  geometry.cc  geometry.h  gvector.cc  gvector.h  line.cc  line.h  math.cc  math.h  point.cc  point.h  point_2d.cc  point_2d.h  polygon.cc  polygon.h  serializer.cc  serializer.h  shape.cc  shape.h
reap/core/util/: BUILD  status.cc  status.h
reap/plan/: BUILD  area_bound.cc  area_bound.h  area_plan.h  arrangement.h  basic_area_plan.cc  basic_area_plan.h  graph_util.cc  graph_util.h  outline_mesh_plan.cc  outline_mesh_plan.h  outline_plan.h  plan.cc  plan.h  plan_config.h
reap/proto/: BUILD  geometry.proto  plan.proto  reap.proto
reap/test/: BUILD  draw_area_bound.cc  main.cc  test_arrangement.cc  test_cgal.cc
tools/: configure.sh  cpplint.sh
